ch38/tenants.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubebook-ch38-team-a
  labels:
    tenant: team-a
    pod-security.kubernetes.io/enforce: baseline
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubebook-ch38-team-b
  labels:
    tenant: team-b
    pod-security.kubernetes.io/enforce: baseline
