ch38/backlog.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backlog
spec:
  securityContext:
    sysctls:
      - name: net.core.somaxconn
        value: "8192"
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
