ch38/caps.yaml
apiVersion: v1
kind: Pod
metadata:
  name: caps
spec:
  containers:
    - name: none
      image: busybox:1.37
      command: ["sleep", "3600"]
      securityContext:
        capabilities:
          drop: ["ALL"]
    - name: net
      image: busybox:1.37
      command: ["sleep", "3600"]
      securityContext:
        capabilities:
          add: ["NET_ADMIN"]
    - name: chownonly
      image: busybox:1.37
      command: ["sleep", "3600"]
      securityContext:
        capabilities:
          drop: ["ALL"]
          add: ["CHOWN"]
