ch38/exr.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exr
  namespace: kubebook-ch38-ex-restricted
spec:
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        allowPrivilegeEscalation: false
        seccompProfile:
          type: RuntimeDefault
        capabilities:
          drop: ["ALL"]
