ch38/hostmix.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostmix
spec:
  volumes:
    - name: host
      hostPath:
        path: /tmp/kubebook-ch38-host
        type: DirectoryOrCreate
  containers:
    - name: rootc
      image: busybox:1.37
      command: ["sleep", "3600"]
      volumeMounts:
        - name: host
          mountPath: /host
    - name: userc
      image: busybox:1.37
      command: ["sleep", "3600"]
      securityContext:
        runAsUser: 1000
      volumeMounts:
        - name: host
          mountPath: /host
