ch38/hostpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpod
  namespace: kubebook-ch38-baseline
spec:
  volumes:
    - name: host
      hostPath:
        path: /tmp
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
      volumeMounts:
        - name: host
          mountPath: /host
