ch38/ids.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ids
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  volumes:
    - name: data
      emptyDir: {}
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
      volumeMounts:
        - name: data
          mountPath: /data
      securityContext:
        allowPrivilegeEscalation: false
