ch38/mixed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fine
  namespace: kubebook-ch38-ex-mixed
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]
---
apiVersion: v1
kind: Pod
metadata:
  name: rootpod
  namespace: kubebook-ch38-ex-mixed
spec:
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
