ch38/ng2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ng2
spec:
  volumes:
    - name: cache
      emptyDir: {}
  containers:
    - name: web
      image: nginx:1.28-alpine
      securityContext:
        readOnlyRootFilesystem: true
      volumeMounts:
        - name: cache
          mountPath: /var/cache/nginx
