ch38/ng3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ng3
spec:
  volumes:
    - name: cache
      emptyDir: {}
    - name: run
      emptyDir: {}
  containers:
    - name: web
      image: nginx:1.28-alpine
      securityContext:
        readOnlyRootFilesystem: true
      volumeMounts:
        - name: cache
          mountPath: /var/cache/nginx
        - name: run
          mountPath: /run
