ch38/ngro.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ngro
spec:
  containers:
    - name: web
      image: nginx:1.28-alpine
      securityContext:
        readOnlyRootFilesystem: true
