ch38/nonroot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nonroot
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
