ch38/over.yaml
apiVersion: v1
kind: Pod
metadata:
  name: over
spec:
  securityContext:
    runAsUser: 1000
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
      securityContext:
        runAsUser: 2000
