ch38/priv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: priv
spec:
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
      securityContext:
        privileged: true
