ch38/priv2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: priv2
  namespace: kubebook-ch38-baseline
spec:
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
      securityContext:
        privileged: true
