ch38/shm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shm
spec:
  securityContext:
    sysctls:
      - name: kernel.shm_rmid_forced
        value: "1"
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
