ch38/tuned.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tuned
spec:
  securityContext:
    sysctls:
      - name: net.ipv4.tcp_keepalive_time
        value: "600"
  containers:
    - name: c
      image: busybox:1.37
      command: ["sleep", "3600"]
